Use Double.valueOf(String)