@@ -105,7 +105,7 @@ public class BigDecimalConverterTestCase extends NumberConverterTestBase<BigDeci
             new Integer(9),
             new Long(10),
             new Float("11.1"),
-            new Double("12.2"),
+            Double.valueOf("12.2"),
             new BigDecimal("3200.11"),
             new ExtendingBigDecimal("3200.11")
         };
